@@ -107,6 +107,7 @@ foreach testitem $seltests {
     # It's either C or C++ at the moment.
     if { $testtype == "C++" } {
 	set testflags "$cflags $cxxflags"
+	set compiler "$CXX"
 	if [string match "*gcc*" [lindex $CC 0]] {
 	    # Starting with 3.4.0, -fvtable-gc is no longer supported and thus
 	    # the functionality we try to test for cannot be expected to work.
@@ -118,19 +119,20 @@ foreach testitem $seltests {
 	}
     } {
 	set testflags "$cflags"
+	set compiler "$CC"
     }
 
     # Note that we do not actually *use* CXX; we just add cxxflags for C++
     # tests.  It might have been a buglet originally; now I think better
     # leave as is.
-    if { ![ld_compile "$CC $testflags" $srcdir/$subdir/$testfile $objfile] } {
+    if { ![ld_compile "$compiler $testflags" $srcdir/$subdir/$testfile $objfile] } {
 	unresolved $testname
 	continue
     }
 
     # V850 targets need libgcc.a
     if [istarget v850*-*-elf] {
-	set libgcc [remote_exec host "$CC -print-libgcc-file-name"]
+	set libgcc [remote_exec host "$compiler -print-libgcc-file-name"]
 	set libgcc [lindex $libgcc 1]
 	regsub -all "\[\r\n\]" $libgcc "" libgcc
 	set objfile "$objfile $libgcc"
@@ -138,7 +140,7 @@ foreach testitem $seltests {
 
     # ARM targets need libgcc.a in THUMB mode so that __call_via_r3 is provided
     if {[istarget arm-*-*] || [istarget xscale-*-*]} {
-	set libgcc [remote_exec host "$CC -print-libgcc-file-name"]
+	set libgcc [remote_exec host "$compiler -print-libgcc-file-name"]
 	set libgcc [lindex $libgcc 1]
 	regsub -all "\[\r\n\]" $libgcc "" libgcc
 	set objfile "$objfile $libgcc"
@@ -146,7 +148,7 @@ foreach testitem $seltests {
 
     # HPPA linux targets need libgcc.a for millicode routines ($$dyncall).
     if [istarget hppa*-*-linux*] {
-	set libgcc [remote_exec host "$CC -print-libgcc-file-name"]
+	set libgcc [remote_exec host "$compiler -print-libgcc-file-name"]
 	set libgcc [lindex $libgcc 1]
 	regsub -all "\[\r\n\]" $libgcc "" libgcc
 	set objfile "$objfile $libgcc"
